# railgun-rust

./: Cargo.toml  LICENSE
crates/core/: Cargo.toml
crates/core/resources/poi/POI_13x13/: vkey.json
crates/core/resources/poi/POI_3x3/: vkey.json
crates/core/src/: lib.rs  notes.rs  provider.rs  query_rpc_pool.rs  serde_helpers.rs  transact.rs  transact_response.rs  tree.rs  utxo.rs
crates/core/src/contracts/: mod.rs  railgun.rs  shield.rs
crates/core/src/crypto/: aes_gcm.rs  ark_utils.rs  mod.rs  poseidon.rs  railgun.rs  shared_key.rs  snark_proof.rs
crates/indexed-artifacts/: Cargo.toml
crates/indexed-artifacts/src/: lib.rs
crates/local-db/: Cargo.toml
crates/local-db/src/: lib.rs  migrations.rs  tests.rs
crates/merkletree/: Cargo.toml
crates/merkletree/benches/: hash_layer.rs
crates/merkletree/src/: errors.rs  lib.rs  persist.rs  wallet.rs
crates/merkletree/src/quick/: graphql.rs  mod.rs  types.rs
crates/merkletree/src/slow/: mod.rs  types.rs
crates/merkletree/src/sync/: mod.rs
crates/merkletree/src/tree/: mod.rs
crates/poi/: Cargo.toml
crates/poi/src/: cache.rs  error.rs  lib.rs  poi.rs  sensitive_url.rs
crates/poi/src/artifacts/: blocked.rs  manifest.rs  mod.rs  snapshot.rs  v4.rs  verify.rs
crates/poi/tests/fixtures/: blocked_shield.json  poi_event_legacy_transact.json  poi_event_shield.json  poi_event_transact.json  poi_event_unshield.json
crates/public-broadcaster-protocol/: Cargo.toml
crates/public-broadcaster-protocol/src/: lib.rs
crates/railgun-wallet/: Cargo.toml
crates/railgun-wallet/resources/metadata/: artifact-v2-hashes.json  artifacts.json
crates/railgun-wallet/src/: artifacts.rs  keys.rs  lib.rs  notes.rs  prover.rs  scan.rs  tx.rs  wallet_cache.rs  wasm_module_cache.rs  zkey_cache.rs
crates/railgun-wallet/src/tx/: builder.rs  error.rs  poi.rs  types.rs
crates/railgun-wallet/src/tx/builder/: selection.rs  tests.rs
crates/railgun-wallet/tests/: fixtures.rs  indexed_wallet.rs
crates/railgun-wallet/tests/fixtures/: railgun-fixtures.json
crates/sync-service/: Cargo.toml
crates/sync-service/src/: chain.rs  indexed_artifacts.rs  lib.rs  manager.rs  poi_artifacts.rs  poi_cache.rs  poi_v4.rs  public_cache.rs  trustless_artifacts.rs  txid_cache.rs  types.rs  wallet.rs
crates/sync-service/src/chain/: backfill.rs  data_plane.rs  forest_db.rs  indexed_wallet.rs  logs.rs  merkle_artifacts.rs  service.rs  tests.rs  types.rs  workers.rs
crates/sync-service/src/poi_artifacts/: test_support.rs  v4_cache.rs  v4_ingest.rs
crates/sync-service/src/txid_cache/: artifact.rs  index.rs  lookup.rs  manifest.rs  paths.rs  proof.rs  sync.rs  tests.rs  types.rs
crates/sync-service/src/wallet/: actor.rs  delta.rs  handle.rs  local_poi_cache.rs  output_poi_recovery.rs  pending_output_poi.rs  persist.rs  poi_maintenance.rs  poi_refresh.rs  poi_sources.rs  private_remote.rs  tests.rs  worker.rs
crates/sync-service/src/wallet/output_poi_recovery/: public_cache.rs
crates/waku/: Cargo.toml  build.rs
crates/waku-relay/: Cargo.toml
crates/waku-relay/src/: client.rs  error.rs  lib.rs  msg.rs
crates/waku/proto/: filter.proto  light_push.proto  metadata.proto  peer_exchange.proto  store.proto
crates/waku/src/: address_policy.rs  config.rs  coordinator.rs  error.rs  lib.rs  proto.rs  transport.rs  types.rs
crates/waku/src/coordinator/: api.rs
crates/waku/src/discovery/: enr.rs  enr_tree.rs  error.rs  mod.rs  txt.rs
crates/waku/src/protocols/: codec.rs  filter.rs  lightpush.rs  metadata.rs  mod.rs  peer_exchange.rs  store.rs
