[workspace]
members = [
    "crates/core",
    "crates/indexed-artifacts",
    "crates/local-db",
    "crates/merkletree",
    "crates/poi",
    "crates/public-broadcaster-protocol",
    "crates/railgun-wallet",
    "crates/sync-service",
    "crates/waku",
    "crates/waku-relay",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.91"

[workspace.dependencies]
aes = "0.8"
aes-gcm = "0.10"
alloy = { version = "2", features = ["serde", "signer-mnemonic"] }
alloy-primitives = { version = "1.6", features = ["serde"] }
alloy-provider = "2"
alloy-rpc-types-eth = "2"
alloy-transport = "2"
ark-bn254 = "0.6"
ark-ed-on-bn254 = "0.6"
ark-ff = "0.6"
ark-groth16 = "0.6"
base64 = "0.22"
bech32 = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
cid = "0.11"
curve25519-dalek = "5"
ed25519-dalek = "3"
futures = "0.3"
getrandom = "0.4"
hmac = "0.13"
ipld-dagpb = "0.2"
ipld-core = "0.4"
k256 = { version = "0.14", features = ["ecdsa"] }
libp2p = "0.56"
libp2p-identity = { version = "0.2", default-features = false, features = ["ed25519", "peerid"] }
lru = "0.18"
multihash-codetable = { version = "0.2", features = ["sha2"] }
parking_lot = "0.12"
quick-protobuf = "0.8"
rand = "0.10"
redb = "4.1"
reqwest = { version = "0.13", features = ["socks", "gzip", "deflate", "brotli", "json"] }
rmp-serde = "1.3"
rs-car = "0.5"
rust-ipns = { version = "0.9", default-features = false, features = ["ed25519"] }
ruint = { version = "1.17", features = ["num-bigint"] }
serde = { version = "1", features = ["derive"] }
serde_ipld_dagcbor = "0.6"
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tokio = "1"
tracing = "0.1"
url = "2"
bytes = { version = "1.11" }
byteorder = "1"
rayon = { version = "1.11" }
async-trait = "0.1"
arti-client = "0.44"
tor-rtcompat = "0.44"
zstd = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 8

[profile.dev]
incremental = true
codegen-units = 16
debug = true
panic = "abort"
strip = "none"

[profile.dev.build-override]
opt-level = 3

[workspace.lints]
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pub_underscore_fields = "allow"
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
manual_clamp = "warn"
mutex_integer = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"
use_self = "warn"
missing_const_for_fn = "warn"
empty_line_after_doc_comments = "warn"
iter_on_single_items = "warn"
match_same_arms = "warn"
doc_markdown = "warn"
unnecessary_struct_initialization = "warn"
string_lit_as_bytes = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
type_repetition_in_bounds = "warn"
flat_map_option = "warn"
manual_assert = "warn"
manual_string_new = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
zero_sized_map_values = "warn"
single_char_pattern = "warn"
needless_continue = "warn"
enum_glob_use = "warn"
iter_without_into_iter = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
similar_names = "allow"
too_many_arguments = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
struct_field_names = "allow"
implicit_hasher = "allow"
needless_lifetimes = "allow"
fn_params_excessive_bools = "allow"

[profile.profiling]
inherits = "release"
debug = true
panic = "abort"
strip = "none"
