[package]
name = "broadcaster-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true }
alloy-provider = { workspace = true }
alloy-transport = { workspace = true }
aes = { workspace = true }
aes-gcm = { workspace = true }
ark-bn254 = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
bech32 = { workspace = true }
curve25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rmp-serde = { workspace = true }
rs-poseidon = { git = "https://github.com/codex-storage/rs-poseidon.git", rev = "bdbb8ba2735406e6e7b747abd3bc6711d55370aa" }
ruint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
typenum = "1.19"
x25519-dalek = { version = "2", features = ["static_secrets"] }

[lints]
workspace = true
