[package]
name = "railgun-indexed-artifacts"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[lints]
workspace = true
