[package]
name = "local-db"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true }
broadcaster-core = { path = "../core" }
redb = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
