[package]
name = "merkletree"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT"

[dependencies]
alloy = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
broadcaster-core = { path = "../core" }
reqwest = { workspace = true, features = ["json"] }
rmp-serde = { version = "1.3" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
rayon = { workspace = true}

[features]
bench = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hash_layer"
harness = false
required-features = ["bench"]

[lints]
workspace = true
