[package]
name = "merkletree"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT"

[dependencies]
alloy = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
broadcaster-core = { path = "../core" }
reqwest = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
url = { workspace = true }
rayon = { workspace = true}

[features]
bench = []

[dev-dependencies]
criterion = "0.5"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "hash_layer"
harness = false
required-features = ["bench"]

[lints]
workspace = true
