[package]
name = "poi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
merkletree = { path = "../merkletree" }
reqwest = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
broadcaster-core = { path = "../core" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
