[package]
name = "railgun-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
alloy = { workspace = true, features = ["serde"] }
ark-bn254 = "0.5"
ark-circom = "0.5"
ark-ed-on-bn254 = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-relations = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
bloock-blake-rs = "0.1.0"
bip39 = "2"
brotli = "8.0.2"
broadcaster-core = { path = "../core" }
color-eyre = "0.6"
curve25519-dalek = "4"
ed25519-dalek = "2"
hex = "0.4"
hmac = "0.12"
merkletree = { path = "../merkletree" }
local-db = { path = "../local-db" }
num-bigint = "0.4"
num-traits = "0.2"
tracing = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
ruint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.3"
sha2 = "0.10"
thiserror = { workspace = true }
typenum = "1"
url = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
wasmer = "4.4"
tokio = { workspace = true, features = ["sync"] }
rayon = { workspace = true }

[dev-dependencies]
bech32 = "0.11"
tokio = { workspace = true, features = ["full"] }
