[package]
name = "railgun-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = ["serde"] }
alloy-rpc-types-eth = { workspace = true }
ark-bn254 = { workspace = true }
ark-circom = "0.6"
ark-ed-on-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-relations = "0.6"
ark-serialize = "0.6"
ark-std = "0.6"
bloock-blake-rs = "0.1.0"
bip39 = "2"
brotli = "8.0.2"
broadcaster-core = { path = "../core" }
color-eyre = "0.6"
curve25519-dalek = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
merkletree = { path = "../merkletree" }
local-db = { path = "../local-db" }
poi = { path = "../poi" }
num-bigint = "0.4"
num-traits = "0.2"
tracing = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
ruint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
wasmer = { version = "6.1", features = ["singlepass"] }
wasmer-compiler-singlepass = "6.1"
tokio = { workspace = true, features = ["sync"] }
rayon = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
